fixing overflow and comment box width

--- a/contact/contactstyle.css
+++ b/contact/contactstyle.css
@@ -10,6 +10,7 @@
   display:flex;
   justify-content:center;
   align-items:center;
+  overflow:scroll;
 }
 .footer{
   position:absolute;
@@ -52,8 +53,8 @@
 }
 #comments{
   display:inline-block;
-  width:400px;
-  height:200px;
+  width:100%;
+  height:150px;
 }
 @media screen and (max-width: 768px){
   .words {
@@ -61,9 +62,6 @@
     position:relative;
     top:15%;
     padding-bottom:20%;
-  }
-  #comments {
-    width:250px;
   }
 }
 
